# athena

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/templates/: api_template.md  configuration_template.md  development_guidelines.md
documentation/context/: athenaArchitecture.md  athenaCLIDesign.md  athenaImplementationPlan.md  athenaPRD.md
documentation/plans/: Workplan Description.md
src/: __init__.py
src/athena/: __init__.py  cli.py
src/athena/core/: __init__.py  orchestrator.py
tests/: test_cli.py
tests/core/: test_orchestrator.py
