[project]
name = "athena"
version = "0.1.0"
description = "AI knowledge management assistant for Obsidian markdown notes"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "ruff (>=0.11.10,<0.12.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "typer (>=0.15.4,<0.16.0)",
    "rich (>=14.0.0,<15.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "athena"
version = "0.1.0"
description = "AI knowledge management assistant for Obsidian markdown notes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "athena", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ruff = "^0.11.10"
pytest = "^8.3.5"
typer = "^0.15.4"
rich = "^14.0.0"
sqlalchemy = "^2.0.41"
alembic = "^1.15.2"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
black = "^24.2.0"
mypy = "^1.8.0"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["athena"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/athena"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
